Update title and description meta tags in index.html

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DOMINUS | Servidor do Discord</title>
-  <meta name="description" content="Site oficial do servidor DOMINUS no Discord. Comunidade, novidades, eventos e destaques." />
+  <title>DOMINUS | Servidor do Discord,para jogar com amigos,fazer amizades.Jogue jogos como Minecraft,Roblox,CSGO e muito mais!!! venha fazer parte da DOMINUS!</title>
+  <meta name="description" content="Site oficial do servidor DOMINUS no Discord. Comunidade, novidades, amizade e destaques." />
   <meta name="keywords" content="DOMINUS, Discord, servidor Discord, comunidade, games, tecnologia" />
   <meta name="author" content="Servidor DOMINUS" />
   <meta name="robots" content="index, follow" />
