Add favicon links to index.html
Added favicon links to the HTML head section.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html><html lang="pt-BR">
 <head>
+  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="shortcut icon" href="favicon.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DOMINUS | Servidor do Discord,para jogar com amigos,fazer amizades.Jogue jogos como Minecraft,Roblox,CSGO e muito mais!!! venha fazer parte da DOMINUS!</title>
