--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html><html lang="pt-BR">
+
+    <!DOCTYPE html>
+<html lang="pt-BR">
 <head>
   <link rel="icon" href="favicon.png" type="image/png">
   <link rel="shortcut icon" href="favicon.png">
@@ -16,117 +18,130 @@
       --azul-claro: #4da3ff;
       --branco: #ffffff;
       --cinza: #f2f4f8;
-    }* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+      --texto-claro: #ffffff;
+      --texto-escuro: #0a1f44;
+      --card-bg-claro: #ffffff;
+      --card-bg-escuro: linear-gradient(135deg, var(--azul-claro), #7bb9ff);
+    }
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
 
-body {
-  background-color: var(--cinza);
-  color: var(--azul-escuro);
-}
+    body {
+      background-color: var(--cinza);
+      color: var(--azul-escuro);
+      transition: 0.5s;
+    }
 
-header {
-  background: linear-gradient(135deg, var(--azul-escuro), var(--azul-claro));
-  color: var(--branco);
-  padding: 80px 20px;
-  text-align: center;
-}
+    header {
+      background: linear-gradient(135deg, var(--azul-escuro), var(--azul-claro));
+      color: var(--branco);
+      padding: 80px 20px;
+      text-align: center;
+      transition: 0.5s;
+    }
 
-header h1 {
-  font-size: 4rem;
-  letter-spacing: 6px;
-}
+    header h1 { font-size: 4rem; letter-spacing: 6px; }
+    header p { font-size: 1.2rem; margin-top: 15px; max-width: 600px; margin-left: auto; margin-right: auto; }
 
-header p {
-  font-size: 1.2rem;
-  margin-top: 15px;
-  max-width: 600px;
-  margin-left: auto;
-  margin-right: auto;
-}
+    nav {
+      background-color: var(--azul-escuro);
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      padding: 15px;
+      transition: 0.5s;
+      flex-wrap: wrap;
+      align-items: center;
+    }
 
-nav {
-  background-color: var(--azul-escuro);
-  display: flex;
-  justify-content: center;
-  gap: 30px;
-  padding: 15px;
-}
+    nav a {
+      color: var(--branco);
+      text-decoration: none;
+      font-weight: bold;
+      transition: 0.3s;
+    }
 
-nav a {
-  color: var(--branco);
-  text-decoration: none;
-  font-weight: bold;
-  transition: 0.3s;
-}
+    nav a:hover { color: var(--azul-claro); }
 
-nav a:hover {
-  color: var(--azul-claro);
-}
+    .theme-toggle {
+      cursor: pointer;
+      background-color: var(--branco);
+      color: var(--azul-escuro);
+      border: none;
+      padding: 8px 12px;
+      border-radius: 8px;
+      font-weight: bold;
+      transition: 0.3s;
+      margin-left: 20px;
+    }
 
-.container {
-  max-width: 1100px;
-  margin: 60px auto;
-  padding: 0 20px;
-}
+    .container {
+      max-width: 1100px;
+      margin: 60px auto;
+      padding: 0 20px;
+    }
 
-.section {
-  background-color: var(--branco);
-  border-radius: 16px;
-  padding: 40px;
-  margin-bottom: 40px;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-}
+    .section {
+      background-color: var(--card-bg-claro);
+      border-radius: 16px;
+      padding: 40px;
+      margin-bottom: 40px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+      transition: 0.5s;
+    }
 
-.section h2 {
-  color: var(--azul-escuro);
-  margin-bottom: 15px;
-  font-size: 2rem;
-}
+    .section h2 { color: var(--azul-escuro); margin-bottom: 15px; font-size: 2rem; }
 
-.cards {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 25px;
-  margin-top: 30px;
-}
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 25px;
+      margin-top: 30px;
+    }
 
-.card {
-  background: linear-gradient(135deg, var(--azul-claro), #7bb9ff);
-  color: var(--branco);
-  padding: 25px;
-  border-radius: 14px;
-  transition: transform 0.3s, box-shadow 0.3s;
-}
+    .card {
+      background: linear-gradient(135deg, var(--azul-claro), #7bb9ff);
+      color: var(--texto-claro);
+      padding: 25px;
+      border-radius: 14px;
+      transition: transform 0.3s, box-shadow 0.3s, background 0.5s;
+    }
 
-.card:hover {
-  transform: translateY(-8px);
-  box-shadow: 0 15px 30px rgba(0,0,0,0.25);
-}
+    .card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 15px 30px rgba(0,0,0,0.25);
+    }
 
-.card h3 {
-  margin-bottom: 10px;
-}
+    .card h3 { margin-bottom: 10px; }
+    .card img { width: 60px; height: 60px; border-radius: 50%; margin-bottom: 12px; }
 
-footer {
-  background-color: var(--azul-escuro);
-  color: var(--branco);
-  text-align: center;
-  padding: 25px;
-  margin-top: 60px;
-}
+    footer {
+      background-color: var(--azul-escuro);
+      color: var(--branco);
+      text-align: center;
+      padding: 25px;
+      margin-top: 60px;
+      transition: 0.5s;
+    }
 
-footer span {
-  color: var(--azul-claro);
-  font-weight: bold;
-}
+    footer span { color: var(--azul-claro); font-weight: bold; }
 
+    /* TEMA ESCURO */
+    body.dark-mode {
+      background-color: var(--azul-escuro);
+      color: var(--texto-claro);
+    }
+
+    body.dark-mode .section {
+      background: var(--card-bg-escuro);
+      color: var(--texto-claro);
+    }
+
+    body.dark-mode nav { background-color: var(--azul-escuro); }
+    body.dark-mode footer { background-color: var(--azul-escuro); }
   </style>
 </head>
-<body>  <header id="inicio">
+<body>  
+  <header id="inicio">
     <h1>DOMINUS</h1>
     <p>
       Site oficial inspirado no servidor <strong>DOMINUS</strong> do Discord.
@@ -136,74 +151,116 @@ footer span {
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/discord.svg" alt="Discord Logo" width="40" style="filter: invert(1);">
       <span style="font-size:1.1rem; font-weight:bold;">Servidor do Discord</span>
     </div>
-  </header>  <nav>
+  </header>  
+
+  <nav>
     <a href="#inicio">Início</a>
     <a href="#sobre">Sobre</a>
     <a href="#primeiro">Primeiro Espaço</a>
+    <a href="#ranking">Ranking</a>
     <a href="#contato">Contato</a>
-  </nav>  <main class="container"><section class="section">
-  <h2>O que você pode fazer aqui</h2>
-  <div class="cards">
-    <div class="card"><h3>🌐 Site Oficial</h3><p>Este site representa oficialmente o servidor DOMINUS no Discord.</p></div>
-    <div class="card"><h3>💬 Comunidade</h3><p>Entre para conversar, fazer amizades, jogar em call e participar de eventos com a galera.</p><a href="https://discord.gg/GeZJnRpfcD" target="_blank" rel="noopener" style="display:inline-block;margin-top:12px;padding:10px 14px;border-radius:10px;background:#0a1f44;color:#fff;font-weight:bold;text-decoration:none;">Entrar no Discord</a></div>
-    <div class="card"><h3>🚀 Novidades</h3><p>Fique por dentro de anúncios e atualizações do servidor.</p></div>
-  </div>
-</section>
+    <button class="theme-toggle" onclick="toggleTheme()">🌙 Tema Escuro/Claro</button>
+  </nav>  
 
-<section id="sobre" class="section">
-  <h2>Introdução do Servidor</h2>
-  <p>
-    O servidor <strong>DOMINUS</strong> foi criado para pessoas que gostam de jogar — e principalmente para quem curte
-    jogar em <strong>call</strong> com amigos. Aqui a ideia é se divertir, conhecer gente nova e formar times para jogar juntos.
-  </p>
-  <p style="margin-top:10px;">
-    Jogamos títulos como <strong>Minecraft</strong>, <strong>Roblox</strong>, <strong>Rocket League</strong>, <strong>Free Fire</strong>,
-    <strong>Fortnite</strong>, <strong>EOT</strong> e muitos outros. Se o jogo existir e a galera animar, ele entra na call.
-  </p>
-  <p style="margin-top:10px;">
-    Mesmo que você jogue outros jogos, é bem-vindo — o DOMINUS é uma comunidade aberta para todo tipo de player.
-  </p>
-</section>
+  <main class="container">
+    <section class="section">
+      <h2>O que você pode fazer aqui</h2>
+      <div class="cards">
+        <div class="card"><h3>🌐 Site Oficial</h3><p>Este site representa oficialmente o servidor DOMINUS no Discord.</p></div>
+        <div class="card"><h3>💬 Comunidade</h3><p>Entre para conversar, fazer amizades, jogar em call e participar de eventos com a galera.</p><a href="https://discord.gg/GeZJnRpfcD" target="_blank" rel="noopener" style="display:inline-block;margin-top:12px;padding:10px 14px;border-radius:10px;background:#0a1f44;color:#fff;font-weight:bold;text-decoration:none;">Entrar no Discord</a></div>
+        <div class="card"><h3>🚀 Novidades</h3><p>Fique por dentro de anúncios e atualizações do servidor.</p></div>
+      </div>
+    </section>
 
-<section id="primeiro" class="section">
-  <h2>Comunidade em Ação</h2>
-  <p>
-    No DOMINUS, a diversão acontece em grupo. Pessoas jogando, conversando em call e criando momentos únicos.
-  </p>
+    <section id="sobre" class="section">
+      <h2>Introdução do Servidor</h2>
+      <p>
+        O servidor <strong>DOMINUS</strong> foi criado para pessoas que gostam de jogar — e principalmente para quem curte
+        jogar em <strong>call</strong> com amigos. Aqui a ideia é se divertir, conhecer gente nova e formar times para jogar juntos.
+      </p>
+      <p style="margin-top:10px;">
+        Jogamos títulos como <strong>Minecraft</strong>, <strong>Roblox</strong>, <strong>Rocket League</strong>, <strong>Free Fire</strong>,
+        <strong>Fortnite</strong>, <strong>EOT</strong> e muitos outros. Se o jogo existir e a galera animar, ele entra na call.
+      </p>
+      <p style="margin-top:10px;">
+        Mesmo que você jogue outros jogos, é bem-vindo — o DOMINUS é uma comunidade aberta para todo tipo de player.
+      </p>
+    </section>
 
-  <div class="cards">
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1605902711622-cfb43c44367f" alt="Pessoas jogando juntas" style="width:100%;border-radius:12px;margin-bottom:12px;">
-      <h3>Entre no servidor</h3>
-      <p>Faça parte da comunidade DOMINUS e comece sua jornada agora.</p>
-    </div>
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1511512578047-dfb367046420" alt="Jogadores se divertindo" style="width:100%;border-radius:12px;margin-bottom:12px;">
-      <h3>Se divirta</h3>
-      <p>Jogue em call, dê risada e aproveite cada momento com a galera.</p>
-    </div>
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1542751371-adc38448a05e" alt="Jogando videogame" style="width:100%;border-radius:12px;margin-bottom:12px;">
-      <h3>Jogue</h3>
-      <p>Escolha seu jogo favorito e partiu gameplay com amigos.</p>
-    </div>
-  </div>
-</section>
+    <section id="primeiro" class="section">
+      <h2>Comunidade em Ação</h2>
+      <p>
+        No DOMINUS, a diversão acontece em grupo. Pessoas jogando, conversando em call e criando momentos únicos.
+      </p>
 
-<section id="contato" class="section">
-  <h2>Contato</h2>
-  <p>
-    Para parcerias, dúvidas ou sugestões, entre em contato pelo e-mail abaixo:
-  </p>
-  <p style="margin-top:10px;font-weight:bold;">
-    📧 renanribeirosoares57@gmail.com
-  </p>
-</section>
+      <div class="cards">
+        <div class="card">
+          <img src="https://images.unsplash.com/photo-1605902711622-cfb43c44367f" alt="Pessoas jogando juntas" style="width:100%;border-radius:12px;margin-bottom:12px;">
+          <h3>Entre no servidor</h3>
+          <p>Faça parte da comunidade DOMINUS e comece sua jornada agora.</p>
+        </div>
+        <div class="card">
+          <img src="https://images.unsplash.com/photo-1511512578047-dfb367046420" alt="Jogadores se divertindo" style="width:100%;border-radius:12px;margin-bottom:12px;">
+          <h3>Se divirta</h3>
+          <p>Jogue em call, dê risada e aproveite cada momento com a galera.</p>
+        </div>
+        <div class="card">
+          <img src="https://images.unsplash.com/photo-1542751371-adc38448a05e" alt="Jogando videogame" style="width:100%;border-radius:12px;margin-bottom:12px;">
+          <h3>Jogue</h3>
+          <p>Escolha seu jogo favorito e partiu gameplay com amigos.</p>
+        </div>
+      </div>
+    </section>
 
-  </main>  <footer>
+    <!-- Ranking -->
+    <section id="ranking" class="section">
+      <h2>Ranking dos Jogadores</h2>
+      <div class="cards">
+        <div class="card">
+          <img src="avatar-renanfatos.png" alt="Renanfatos">
+          <h3>#1 Renanfatos</h3>
+          <p>XP Total: 1.864 // Nível: 1</p>
+        </div>
+        <div class="card">
+          <img src="avatar-rlk.png" alt="Rlk do guinda">
+          <h3>#2 Rlk do guinda</h3>
+          <p>XP Total: 1.695 // Nível: 1</p>
+        </div>
+        <div class="card">
+          <img src="avatar-mtt.png" alt="mtt">
+          <h3>#3 mtt</h3>
+          <p>XP Total: 1.251 // Nível: 1</p>
+        </div>
+        <div class="card">
+          <img src="avatar-eddie.png" alt="Eddie">
+          <h3>#4 Eddie</h3>
+          <p>XP Total: 628 // Nível: 0</p>
+        </div>
+        <div class="card">
+          <img src="avatar-dumba.png" alt="Dumba">
+          <h3>#5 Dumba</h3>
+          <p>XP Total: 445 // Nível: 0</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="contato" class="section">
+      <h2>Contato</h2>
+      <p>
+        Para parcerias, dúvidas ou sugestões, entre em contato pelo e-mail abaixo:
+      </p>
+      <p style="margin-top:10px;font-weight:bold;">
+        📧 renanribeirosoares57@gmail.com
+      </p>
+    </section>
+  </main>  
+
+  <footer>
     <p>© 2025 <span>DOMINUS</span> — Servidor oficial no Discord.</p>
     <p style="font-size:0.9rem; margin-top:8px;">Este site é indexável e pesquisável no Google.</p>
-  </footer>  <script>
+  </footer>  
+
+  <script>
     // Animação simples ao rolar a página
     const sections = document.querySelectorAll('.section');
     const observer = new IntersectionObserver(entries => {
@@ -221,6 +278,11 @@ footer span {
       sec.style.transition = '0.6s ease';
       observer.observe(sec);
     });
-  </script></body>
-</html></body>
+
+    // TEMA CLARO/ESCURO
+    function toggleTheme() {
+      document.body.classList.toggle('dark-mode');
+    }
+  </script>
+</body>
 </html>
