--- a/index.html
+++ b/index.html
@@ -38,13 +38,12 @@
     }
 
     header {
-      background: linear-gradient(135deg, var(--azul-escuro), var(--azul-claro));
+      background-image: url('banner-header.png'); /* Banner corrigido */
+      background-size: cover;
+      background-position: center;
       color: var(--branco);
       padding: 80px 20px;
       text-align: center;
-      background-image: url('banner.png'); /* Banner de fundo */
-      background-size: cover;
-      background-position: center;
     }
 
     header.dark-mode {
@@ -70,6 +69,7 @@
       justify-content: center;
       gap: 30px;
       padding: 15px;
+      flex-wrap: wrap;
     }
 
     nav a {
@@ -77,6 +77,7 @@
       text-decoration: none;
       font-weight: bold;
       transition: 0.3s;
+      cursor: pointer;
     }
 
     nav a:hover {
@@ -96,12 +97,17 @@
       margin-bottom: 40px;
       box-shadow: 0 10px 25px rgba(0,0,0,0.1);
       transition: 0.3s;
+      display: none; /* todas as seções ocultas por padrão */
     }
 
     body.dark-mode .section {
       background-color: var(--dark-card);
       color: var(--dark-text);
       box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+    }
+
+    .section.active {
+      display: block; /* exibe apenas a aba ativa */
     }
 
     .section h2 {
@@ -167,7 +173,6 @@
       font-weight: bold;
     }
 
-    /* Dark Mode toggle button */
     .dark-toggle {
       position: fixed;
       top: 20px;
@@ -181,17 +186,14 @@
       font-weight: bold;
       z-index: 1000;
     }
-
   </style>
 </head>
 <body>
   <button class="dark-toggle">Modo Escuro</button>
 
-  <header id="inicio">
+  <header id="inicio" class="active-section">
     <h1>DOMINUS</h1>
-    <p>
-      Servidor oficial da comunidade <strong>DOMINUS</strong> no Discord.
-    </p>
+    <p>Servidor oficial da comunidade <strong>DOMINUS</strong> no Discord.</p>
     <div style="margin-top:25px; display:flex; justify-content:center; align-items:center; gap:12px;">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/discord.svg" alt="Discord Logo" width="40" style="filter: invert(1);">
       <span style="font-size:1.1rem; font-weight:bold;">Servidor do Discord</span>
@@ -199,38 +201,33 @@
   </header>
 
   <nav>
-    <a href="#inicio">Início</a>
-    <a href="#sobre">Sobre</a>
-    <a href="#primeiro">Primeiro Espaço</a>
-    <a href="#ranking">Ranking</a>
-    <a href="#contato">Contato</a>
+    <a data-target="inicio" class="active">Início</a>
+    <a data-target="sobre">Sobre</a>
+    <a data-target="primeiro">Primeiro Espaço</a>
+    <a data-target="ranking">Ranking</a>
+    <a data-target="contato">Contato</a>
   </nav>
 
   <main class="container">
+    <section id="inicio" class="section active">
+      <h2>Bem-vindo ao DOMINUS</h2>
+      <p>Entre, divirta-se e faça amizades na nossa comunidade.</p>
+    </section>
 
     <section id="sobre" class="section">
       <h2>Introdução do Servidor</h2>
-      <p>
-        O servidor <strong>DOMINUS</strong> foi criado para pessoas que gostam de jogar — e principalmente para quem curte
-        jogar em <strong>call</strong> com amigos. Aqui a ideia é se divertir, conhecer gente nova e formar times para jogar juntos.
-      </p>
-      <p style="margin-top:10px;">
-        Jogamos títulos como <strong>Minecraft</strong>, <strong>Roblox</strong>, <strong>Rocket League</strong>, <strong>Free Fire</strong>,
-        <strong>Fortnite</strong>, <strong>EOT</strong> e muitos outros. Se o jogo existir e a galera animar, ele entra na call.
-      </p>
+      <p>O servidor <strong>DOMINUS</strong> foi criado para pessoas que gostam de jogar em call com amigos, se divertir e criar times.</p>
+      <p>Jogamos títulos como <strong>Minecraft</strong>, <strong>Roblox</strong>, <strong>Rocket League</strong>, <strong>Free Fire</strong>, <strong>Fortnite</strong>, <strong>EOT</strong> e muitos outros.</p>
     </section>
 
     <section id="primeiro" class="section">
       <h2>Comunidade em Ação</h2>
-      <p>
-        No DOMINUS, a diversão acontece em grupo. Pessoas jogando, conversando em call e criando momentos únicos.
-      </p>
       <div class="cards">
         <div class="card">
           <img src="https://images.unsplash.com/photo-1605902711622-cfb43c44367f" alt="Pessoas jogando juntas">
           <h3>Entre no servidor</h3>
           <p>Faça parte da comunidade DOMINUS e comece sua jornada agora.</p>
-          <a href="https://discord.gg/GeZJnRpfcD" target="_blank" rel="noopener" style="display:inline-block;margin-top:12px;padding:10px 14px;border-radius:10px;background:#0a1f44;color:#fff;font-weight:bold;text-decoration:none;">Entrar no Discord</a>
+          <a href="https://discord.gg/GeZJnRpfcD" target="_blank" style="display:inline-block;margin-top:12px;padding:10px 14px;border-radius:10px;background:#0a1f44;color:#fff;font-weight:bold;text-decoration:none;">Entrar no Discord</a>
         </div>
         <div class="card">
           <img src="https://images.unsplash.com/photo-1511512578047-dfb367046420" alt="Jogadores se divertindo">
@@ -245,7 +242,6 @@
       </div>
     </section>
 
-    <!-- Ranking Section -->
     <section id="ranking" class="section">
       <h2>Ranking dos Jogadores</h2>
       <div class="cards">
@@ -279,14 +275,9 @@
 
     <section id="contato" class="section">
       <h2>Contato</h2>
-      <p>
-        Para parcerias, dúvidas ou sugestões, entre em contato pelo e-mail abaixo:
-      </p>
-      <p style="margin-top:10px;font-weight:bold;">
-        📧 renanribeirosoares57@gmail.com
-      </p>
+      <p>Para parcerias, dúvidas ou sugestões, entre em contato pelo e-mail abaixo:</p>
+      <p style="margin-top:10px;font-weight:bold;">📧 renanribeirosoares57@gmail.com</p>
     </section>
-
   </main>
 
   <footer>
@@ -303,6 +294,12 @@
 
     // Scroll animation
     const sections = document.querySelectorAll('.section');
+    sections.forEach(sec => {
+      sec.style.opacity = 0;
+      sec.style.transform = 'translateY(40px)';
+      sec.style.transition = '0.6s ease';
+    });
+
     const observer = new IntersectionObserver(entries => {
       entries.forEach(entry => {
         if (entry.isIntersecting) {
@@ -311,12 +308,18 @@
         }
       });
     }, { threshold: 0.2 });
+    sections.forEach(sec => observer.observe(sec));
 
-    sections.forEach(sec => {
-      sec.style.opacity = 0;
-      sec.style.transform = 'translateY(40px)';
-      sec.style.transition = '0.6s ease';
-      observer.observe(sec);
+    // Navegação entre abas
+    const navLinks = document.querySelectorAll('nav a');
+    navLinks.forEach(link => {
+      link.addEventListener('click', () => {
+        const target = link.getAttribute('data-target');
+        sections.forEach(sec => sec.classList.remove('active'));
+        document.getElementById(target).classList.add('active');
+        navLinks.forEach(l => l.classList.remove('active'));
+        link.classList.add('active');
+      });
     });
   </script>
 </body>
