Remove 'A' from title in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="shortcut icon" href="favicon.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>A DOMINUS | Servidor do Discord, para jogar com amigos e fazer amizades</title>
+  <title> DOMINUS | Servidor do Discord, para jogar com amigos e fazer amizades</title>
   <meta name="description" content="Site oficial do servidor A DOMINUS no Discord. Comunidade, novidades, amizade e destaques." />
   <meta name="keywords" content="A DOMINUS, Discord, servidor Discord, comunidade, games, tecnologia" />
   <meta name="author" content="Servidor A DOMINUS" />
@@ -241,7 +241,7 @@
       <div class="cards">
         <div class="card">
           <h3>História do Servidor</h3>
-          <p>O servidor A DOMINUS começou quando eu, Renan, junto com dois amigos, decidimos criar uma forma de reunir várias pessoas, incentivando a amizade e o desenvolvimento social. Na primeira tentativa não tivemos sucesso, mas continuamos investindo, e hoje o servidor existe graças à união desses três fundadores. A ideia sempre foi aproximar pessoas de todos os lugares, promovendo amizade verdadeira, comunicação e diversão.</p>
+          <p>O servidor DOMINUS começou quando eu, Renan, junto com dois amigos, decidimos criar uma forma de reunir várias pessoas, incentivando a amizade e o desenvolvimento social. Na primeira tentativa não tivemos sucesso, mas continuamos investindo, e hoje o servidor existe graças à união desses três fundadores. A ideia sempre foi aproximar pessoas de todos os lugares, promovendo amizade verdadeira, comunicação e diversão.</p>
         </div>
       </div>
     </section>
