Modify title and enhance server history description
Updated the title and server history description for clarity and detail.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="shortcut icon" href="favicon.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> DOMINUS | Servidor do Discord, para jogar com amigos e fazer amizades</title>
+  <title>A DOMINUS | Servidor do Discord, para jogar com amigos e fazer amizades</title>
   <meta name="description" content="Site oficial do servidor A DOMINUS no Discord. Comunidade, novidades, amizade e destaques." />
   <meta name="keywords" content="A DOMINUS, Discord, servidor Discord, comunidade, games, tecnologia" />
   <meta name="author" content="Servidor A DOMINUS" />
@@ -199,7 +199,6 @@
       font-weight: bold;
       z-index: 1000;
     }
-
   </style>
 </head>
 <body>
@@ -241,7 +240,9 @@
       <div class="cards">
         <div class="card">
           <h3>História do Servidor</h3>
-          <p>O servidor DOMINUS começou quando eu, Renan, junto com dois amigos, decidimos criar uma forma de reunir várias pessoas, incentivando a amizade e o desenvolvimento social. Na primeira tentativa não tivemos sucesso, mas continuamos investindo, e hoje o servidor existe graças à união desses três fundadores. A ideia sempre foi aproximar pessoas de todos os lugares, promovendo amizade verdadeira, comunicação e diversão.</p>
+          <p>
+            Tudo começou quando eu, Renan, junto com dois amigos, decidimos criar uma forma de reunir várias pessoas em um único espaço virtual. O objetivo era ajudar todos a desenvolverem suas habilidades sociais, superar comportamentos antissociais e criar novas amizades. Inicialmente, a primeira tentativa não obteve o sucesso desejado, mas não desistimos. Continuamos investindo nosso tempo e esforço no servidor, mantendo a mesma ideia de aproximar pessoas de diferentes lugares. A DOMINUS nasceu com a finalidade de criar conexões genuínas, permitir que as pessoas jogassem juntas e, acima de tudo, fortalecer amizades verdadeiras. Hoje, o servidor existe e prospera graças à dedicação de três pessoas visionárias, mostrando que união e persistência transformam sonhos em realidade.
+          </p>
         </div>
       </div>
     </section>
@@ -251,7 +252,7 @@
       <h2>Comunidade em Ação</h2>
       <div class="cards">
         <div class="card">
-          <img src="https://images.unsplash.com/photo-1605902711622-cfb43c44367f" alt="Pessoas jogando juntas">
+          <img src="https://images.unsplash.com/photo-1581091215360-3f6f87d60b11" alt="Pessoas jogando juntas">
           <h3>Entre no servidor</h3>
           <p>Faça parte da comunidade A DOMINUS e comece sua jornada agora.</p>
           <a href="https://discord.gg/GeZJnRpfcD" target="_blank" style="display:inline-block;margin-top:12px;padding:10px 14px;border-radius:10px;background:#0a1f44;color:#fff;font-weight:bold;text-decoration:none;">Entrar no Discord</a>
@@ -351,4 +352,5 @@
   </script>
 </body>
 </html>
+
 
