--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       <h2>Bem-vindo à A DOMINUS</h2>
       <p>Entre, divirta-se e faça amizades na nossa comunidade.</p>
       <video autoplay muted loop playsinline>
-        <source src="video-inicio.mp4" type="video/mp4">
+        <source src="video-inicio.mp4." type="video/mp4">
         Seu navegador não suporta vídeos.
       </video>
     </section>
